# option-pricing-kit

./: .gitignore  README.md  environment.yml  pyproject.toml
.github/workflows/: tests.yml
examples/: demo_black_scholes.py
optionkit/core/: __init__.py  factory.py  math_utils.py  model.py  option.py  protocols.py  tree_model.py
optionkit/models/: __init__.py  binomial.py  black_scholes.py  heston.py  merton.py  model.py  montecarlo.py  test_trinomial_adaptive.py  test_trinomial_strict.py  trinomial.py  trinomial_schemes.py
optionkit/payoffs/: __init__.py  american.py  asian.py  digital.py  european.py
tests/: test_american.py  test_asian.py  test_binomial.py  test_black_scholes.py  test_factory.py  test_greeks.py  test_heston.py  test_mc_greeks.py  test_merton.py  test_montecarlo.py  test_registries.py  test_registry_and_factory.py  test_tree_greeks.py  test_trinomial.py  test_trinomial_strict.py
