[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optionkit"
version = "0.0.1"
description = "A modular option pricing kit in Python"
authors = [
  { name = "Nicholas Taylor", email = "taylor.nicky@hotmail.com" }
]
license = { text = "MIT" }
dependencies = [
  "numpy",
  "scipy"
]
requires-python = ">=3.9"
