[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "optionkit"
version = "0.1.0"
description = "A modular Python package for option pricing models and payoffs"
authors = [
    { name="Nicholas Taylor", email="taylor.nicky@hotmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "pytest"
]
